[package]
name = "c3p-mungeon-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.14.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
